# cosmos

./: .gitignore  README.md  diffusion_trainer.py  encoder_trainer.py  evaluate_sae.py  extract_latents.py  generate.py  pyproject.toml  run_single_gpu.py  train_diffusion.py  train_diffusion_rounding.py  train_diffusion_sae.py  train_encoder.py  train_sae.py
architecture/: blocks.py  decoder.py  enc_normalizer.py  encoder.py  latent_attention.py  llama_blocks.py  score_estimator.py  sparse_autoencoder.py
conf/: config.yaml
conf/autoencoder/: default.yaml
conf/autoencoder/optimizer/: adamw.yaml  stableadam.yaml
conf/dataset/: default.yaml  openwebtext-128.yaml  openwebtext-512.yaml  paradetox.yaml  rocstories.yaml  squad2.yaml  wikipedia.yaml  xsum.yaml
conf/decoder/: default.yaml
conf/diffusion/: default.yaml
conf/diffusion/optimizer/: adamw.yaml  stableadam.yaml
conf/encoder/: default.yaml
conf/sae/: default.yaml
conf/tokenizer/: default.yaml
diffusion_utils/: corruption.py  dynamic.py  schedulers.py  solvers.py
estimation/: compute_metrics.py  extended_metrics.py  fid.py  metrics.py  util.py
notebooks/: colab_experiments.ipynb
utils/: __init__.py  dataset_utils.py  ddp_utils.py  diffusion_utils.py  hydra_utils.py  load_to_hub.py  logging_utils.py  owt_preparation.py  sharded_dataset.py  wiki_preparation.py
